Reset for app.json

--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "Python on Heroku example",
+  "name": "BGV Investor Database",
   "description": "A barebones Python app, which can easily be deployed to Heroku.",
   "image": "heroku/python",
-  "repository": "https://github.com/heroku/python-getting-started",
-  "keywords": ["python", "django" ],
-  "addons": [ "heroku-postgresql" ]
+  "repository": "https://github.com/replicantfrommars/bgv-invest",
+  "keywords": ["python", "flask" ],
+  "addons": [ "heroku-graphenedb" ]
 }
