--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
-dj-database-url==0.4.0
-Django==1.9.2
-gunicorn==19.4.5
-psycopg2==2.6.1
-whitenoise==2.0.6
-requests==2.9.1
+bcrypt==2.0.0
+cffi==1.7.0
+click==6.6
+Flask==0.11.1
+gunicorn==19.6.0
+itsdangerous==0.24
+Jinja2==2.8
+MarkupSafe==0.23
+passlib==1.6.5
+py2neo==3
+pycparser==2.14
+requirements==0.1
+six==1.10.0
+Werkzeug==0.11.10
