--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,24 @@
 bcrypt==2.0.0
+blinker==1.4
 cffi==1.7.0
 click==6.6
 Flask==0.11.1
+Flask-Login==0.3.2
+Flask-Mail==0.9.1
+Flask-Principal==0.4.0
+Flask-Security==1.7.5
+Flask-SQLAlchemy==2.1
+Flask-WTF==0.12
 gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 passlib==1.6.5
+psycopg2==2.6.1
 py2neo==2.0.8
 pycparser==2.14
 requirements==0.1
 six==1.10.0
+SQLAlchemy==1.0.13
 Werkzeug==0.11.10
+WTForms==2.1
