--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ passlib==1.6.5
 psycopg2==2.6.1
 py2neo==2.0.8
 pycparser==2.14
+requests==2.11.0
 requirements==0.1
 six==1.10.0
 SQLAlchemy==1.0.13
